Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 982
    • Issues 982
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 125
    • Merge requests 125
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1039
Closed
Open
Created Jul 30, 2019 by Tim-Philipp Müller@tpm🐠Owner

nvenc: build failure on msvc x86

Build on 32-bit MSVC fails like this:

[3340/3809] Compiling C object subprojects/gst-plugins-bad/sys/5bc2b03@@gstnvcodec@sha/gstnvenc.c.obj.
FAILED: subprojects/gst-plugins-bad/sys/5bc2b03@@gstnvcodec@sha/gstnvenc.c.obj 
cl @subprojects/gst-plugins-bad/sys/5bc2b03@@gstnvcodec@sha/gstnvenc.c.obj.rsp
gstnvenc.c(53): error C2373: 'NvEncOpenEncodeSessionEx': redefinition; different type modifiers
nvEncodeAPI.h(3087): note: see declaration of 'NvEncOpenEncodeSessionEx'
gstnvenc.c(61): error C2373: 'NvEncDestroyEncoder': redefinition; different type modifiers
nvEncodeAPI.h(3024): note: see declaration of 'NvEncDestroyEncoder'
gstnvenc.c(68): error C2373: 'NvEncGetEncodeGUIDs': redefinition; different type modifiers
nvEncodeAPI.h(2001): note: see declaration of 'NvEncGetEncodeGUIDs'
gstnvenc.c(76): error C2373: 'NvEncGetEncodeProfileGUIDCount': redefinition; different type modifiers
nvEncodeAPI.h(2032): note: see declaration of 'NvEncGetEncodeProfileGUIDCount'
gstnvenc.c(85): error C2373: 'NvEncGetEncodeProfileGUIDs': redefinition; different type modifiers
nvEncodeAPI.h(2069): note: see declaration of 'NvEncGetEncodeProfileGUIDs'
gstnvenc.c(94): error C2373: 'NvEncGetInputFormats': redefinition; different type modifiers
nvEncodeAPI.h(2131): note: see declaration of 'NvEncGetInputFormats'
gstnvenc.c(102): error C2373: 'NvEncGetEncodePresetCount': redefinition; different type modifiers
nvEncodeAPI.h(2193): note: see declaration of 'NvEncGetEncodePresetCount'
gstnvenc.c(111): error C2373: 'NvEncGetEncodePresetGUIDs': redefinition; different type modifiers
nvEncodeAPI.h(2237): note: see declaration of 'NvEncGetEncodePresetGUIDs'
gstnvenc.c(120): error C2373: 'NvEncGetEncodePresetConfig': redefinition; different type modifiers
nvEncodeAPI.h(2276): note: see declaration of 'NvEncGetEncodePresetConfig'
gstnvenc.c(129): error C2373: 'NvEncGetEncodeCaps': redefinition; different type modifiers
nvEncodeAPI.h(2163): note: see declaration of 'NvEncGetEncodeCaps'
gstnvenc.c(137): error C2373: 'NvEncGetSequenceParams': redefinition; different type modifiers
nvEncodeAPI.h(2862): note: see declaration of 'NvEncGetSequenceParams'
gstnvenc.c(145): error C2373: 'NvEncInitializeEncoder': redefinition; different type modifiers
nvEncodeAPI.h(2361): note: see declaration of 'NvEncInitializeEncoder'
gstnvenc.c(152): error C2373: 'NvEncReconfigureEncoder': redefinition; different type modifiers
nvEncodeAPI.h(3182): note: see declaration of 'NvEncReconfigureEncoder'
gstnvenc.c(159): error C2373: 'NvEncRegisterResource': redefinition; different type modifiers
nvEncodeAPI.h(3117): note: see declaration of 'NvEncRegisterResource'
gstnvenc.c(166): error C2373: 'NvEncUnregisterResource': redefinition; different type modifiers
nvEncodeAPI.h(3148): note: see declaration of 'NvEncUnregisterResource'
gstnvenc.c(173): error C2373: 'NvEncMapInputResource': redefinition; different type modifiers
nvEncodeAPI.h(2959): note: see declaration of 'NvEncMapInputResource'
gstnvenc.c(180): error C2373: 'NvEncUnmapInputResource': redefinition; different type modifiers
nvEncodeAPI.h(2994): note: see declaration of 'NvEncUnmapInputResource'
gstnvenc.c(187): error C2373: 'NvEncCreateInputBuffer': redefinition; different type modifiers
nvEncodeAPI.h(2392): note: see declaration of 'NvEncCreateInputBuffer'
gstnvenc.c(194): error C2373: 'NvEncLockInputBuffer': redefinition; different type modifiers
nvEncodeAPI.h(2768): note: see declaration of 'NvEncLockInputBuffer'
gstnvenc.c(201): error C2373: 'NvEncUnlockInputBuffer': redefinition; different type modifiers
nvEncodeAPI.h(2798): note: see declaration of 'NvEncUnlockInputBuffer'
gstnvenc.c(208): error C2373: 'NvEncDestroyInputBuffer': redefinition; different type modifiers
nvEncodeAPI.h(2421): note: see declaration of 'NvEncDestroyInputBuffer'
gstnvenc.c(215): error C2373: 'NvEncCreateBitstreamBuffer': redefinition; different type modifiers
nvEncodeAPI.h(2456): note: see declaration of 'NvEncCreateBitstreamBuffer'
gstnvenc.c(222): error C2373: 'NvEncLockBitstream': redefinition; different type modifiers
nvEncodeAPI.h(2704): note: see declaration of 'NvEncLockBitstream'
gstnvenc.c(229): error C2373: 'NvEncUnlockBitstream': redefinition; different type modifiers
nvEncodeAPI.h(2734): note: see declaration of 'NvEncUnlockBitstream'
gstnvenc.c(236): error C2373: 'NvEncDestroyBitstreamBuffer': redefinition; different type modifiers
nvEncodeAPI.h(2485): note: see declaration of 'NvEncDestroyBitstreamBuffer'
gstnvenc.c(243): error C2373: 'NvEncEncodePicture': redefinition; different type modifiers
nvEncodeAPI.h(2665): note: see declaration of 'NvEncEncodePicture'

(paths trimmed)

@seungha.yang any ideas? :)

Assignee
Assign to
Time tracking